--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
         </div>
       </div>
     </div>
-    <div class="bg-dark text-white p-5">
+    <div class="bg-dark1 text-white p-5">
       <div class="d-lg-flex d-md-flex text-center justify-content-lg-between justify-content-md-between ">
       <div>
         <a href="https://twitter.com/makemytrip/" ><img src="./images/logo1.png" alt="logo1" height="40px" ></a>
