--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav text-white p-">
+                  <ul class="navbar-nav text-white">
                     <li class="nav-item ">
                       <a class="nav-link active text-white" aria-current="page" href="#"> <img
                           src="./images/Screenshot_20230218_182008.png" alt="" height="30px">Supper Offers</a>
